--- a/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
+++ b/resources/scss/ceres/views/Templates/BasketPreview/_basket-preview.scss
@@ -1,16 +1,20 @@
-.basket-preview{
-
+.basket-preview
+{
 	display: flex;
     flex-flow: column nowrap;
 
-    .basket-header{
+    .basket-header
+    {
         flex: 0 0 auto;
         border-bottom: 1px solid $gray-lighter;
 
-        .basket-header-caption {
-            @include media-breakpoint-up(md) {
+        .basket-header-caption
+        {
+            @include media-breakpoint-up(md)
+            {
                 font-size: 1.5rem;
             }
+
             font-size: 1.25rem;
         }
     }
@@ -20,42 +24,50 @@
         display: flex;
         flex-direction: column;
         flex: 1;
+        overflow: hidden;
 
-        @include media-breakpoint-only(sm) {
+        @include media-breakpoint-only(sm)
+        {
             flex-direction: row;
         }
     }
 
-    .list{
+    .list
+    {
 	    display: flex;
 	    flex-flow: column nowrap;
     	flex: 1;
         overflow: auto;
 
-        @include media-breakpoint-only(sm) {
+        @include media-breakpoint-only(sm)
+        {
             margin-bottom: 5px;
         }
     }
 
-    .totals{
+    .totals
+    {
 	    display: flex;
 	    flex-flow: column nowrap;
         border-top: 1px solid $gray-lighter;
 
         @extend .small;
 
-        dd, dt{
+        dd, dt
+        {
             margin-bottom: 0;
         }
 
-        @include media-breakpoint-only(sm) {
+        @include media-breakpoint-only(sm)
+        {
             border-top: 0;
             border-left: 1px solid $gray-lighter;
         }
     }
 }
 
-.basket-loading-frame {
+.basket-loading-frame
+{
     display: table;
     width: 100%;
 }
