--- a/resources/views/Checkout/OrderConfirmation.twig
+++ b/resources/views/Checkout/OrderConfirmation.twig
@@ -21,7 +21,7 @@
                     <h1 class="h2">{{ trans("Ceres::Template.orderConfirmationThanks") }}</h1>
                     <p>{{ trans("Ceres::Template.orderConfirmationWillBeProcessed") }}</p>
 
-                    {% LayoutContainer.show("Ceres::OrderConfirmation.AddContentAfterConfirmationThanks") %}
+                    {{ LayoutContainer.show("Ceres::OrderConfirmation.AddContentAfterConfirmationThanks") }}
 
                 </div>
             </div>
