only calc after header img loaded

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -291,10 +291,11 @@
                 calculateBodyOffset();
             });
 
-            for (var img in $(document).querySelectorAll("img"))
+            for (var img in header.querySelectorAll("img"))
             {
                 img.onload = function()
                 {
+                    console.log("IMG LOADED");
                     calculateBodyOffset();
                     getUnfixedElements();
                 }
