CHANGE LiveShoppingWidget - add option to show/hide the timer, stock and progress bars

--- a/resources/scss/ceres/components/_live-shopping.scss
+++ b/resources/scss/ceres/components/_live-shopping.scss
@@ -103,7 +103,11 @@ $live-shopping-padding: 1rem .8rem;
         .live-shopping-progress-heading
         {
             text-align: center;
-            margin-bottom: .5rem;
+
+            &:not(:last-child)
+            {
+                margin-bottom: .5rem;
+            }   
         }
     }
 }
