--- a/resources/views/LiveShopping/Components/LiveShopping.twig
+++ b/resources/views/LiveShopping/Components/LiveShopping.twig
@@ -8,11 +8,11 @@
             </a>
         </div>
 
-        <div class="live-shopping-countdown">
+        <div class="live-shopping-countdown" v-if="config.showTimer || config.showStock">
             <hr class="live-shopping-countdown-separator">
-            <div class="live-shopping-countdown-heading">{{ trans("Ceres::Template.liveShoppingOfferEndsIn") }}</div>
+            <div class="live-shopping-countdown-heading" v-if="config.showTimer">{{ trans("Ceres::Template.liveShoppingOfferEndsIn") }}</div>
 
-            <div class="live-shopping-countdown-thread-container">
+            <div class="live-shopping-countdown-thread-container" v-if="config.showTimer">
                 <div v-if="duration.days > 0" class="live-shopping-countdown-thread">
                     <div class="live-shopping-countdown-thread-number">${ duration.days }</div>
                     <div class="small">Tage</div>
@@ -31,18 +31,18 @@
                 </div>
             </div>
 
-            <div class="live-shopping-progress">
+            <div class="live-shopping-progress" v-if="config.showTimer && config.showTimerProgress">
                 <div class="bs4-progress">
                     <div :class="'progress-' + Math.round(timePercentage / 10) * 10" class="bs4-progress-bar" role="progressbar" :style="'width:' + timePercentage + '%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
 
-            <div class="live-shopping-progress">
-                 <div class="live-shopping-progress-heading">
+            <div class="live-shopping-progress" v-if="config.showStock">
+                <div class="live-shopping-progress-heading">
                     <span>{{ trans("Ceres::Template.liveShoppingRemainingStock", {"quantityRemaining": "${ liveShoppingData.quantityMax - liveShoppingData.quantitySold }", "quantityMax": "${ liveShoppingData.quantityMax }"}) }}</span>
                 </div>
 
-                <div class="bs4-progress">
+                <div class="bs4-progress" v-if="config.showStockProgress">
                     <div :class="'progress-' + Math.round(quantitySoldPercentage / 10) * 10" class="bs4-progress-bar" role="progressbar" :style="'width:' + quantitySoldPercentage + '%'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
