--- a/resources/scss/ceres/components/_live-shopping.scss
+++ b/resources/scss/ceres/components/_live-shopping.scss
@@ -2,7 +2,9 @@ $live-shopping-padding: 1rem .8rem;
 
 .live-shopping
 {
-    padding: 0 !important;
+    position: relative;
+    padding: 0;
+    margin: 0;
 
     .live-shopping-item-name
     {
