--- a/resources/views/Customer/Components/ForgotPassword.twig
+++ b/resources/views/Customer/Components/ForgotPassword.twig
@@ -1,14 +1,14 @@
- {% set currentTemplate = services.template.getCurrentTemplate() %}
+{% set currentTemplate = services.template.getCurrentTemplate() %}
  
  <script type="x/template" id="vue-forgot-password-modal">
 	<form :id="'reset-pwd-form-' + _uid" class="reset-pwd-container login-pwd-reset">
-		<div class="modal fade" id="resetPwd" tabindex="-1" role="dialog">
+		<div class="modal fade" id="resetPwd" ref="pwdModal" tabindex="-1" role="dialog">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 						<div class="modal-title h3">{{ trans("Ceres::Template.loginForgotPassword") }}</div>
-					</div>  
+					</div>
 					<div class="modal-body">
 						<div class="alert alert-info alert-dismissible pwd-forgot-info">
 							<span class="info-badge">{{ trans("Ceres::Template.loginForgotPasswordInfo") }}</span>
