ADD form widgets

--- a/resources/views/Customer/Components/Contact/ContactForm.twig
+++ b/resources/views/Customer/Components/Contact/ContactForm.twig
@@ -46,6 +46,14 @@
 								<label for="txt_name">{{ trans("Ceres::Template.contactName") }} ({{ trans("Ceres::Template.contactOptional") }})</label>
 							</div>
 						</div>
+
+						<div class="col-xs-12 col-md-6 m-b-1">
+							<div class="input-unit input-name-field">
+								<input type="radio" name="name">
+								<label for="txt_name">{{ trans("Ceres::Template.contactName") }} ({{ trans("Ceres::Template.contactOptional") }})</label>
+							</div>
+						</div>
+
 						<div class="col-xs-12 col-md-6 m-b-1">
 							<div class="input-unit input-mail-field" data-validate="regex" data-model="userMail">
 								{% set uid_mail = uid() %}
