--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -26,16 +26,18 @@
             <div class="thumb-image">
                 <div class="square-container">
                     <div class="square-inner main-image">
-                        <category-image-carousel template="#vue-category-image-carousel"
-                                                 :image-urls-data="itemData.images | itemImages(imageUrlAccessor)"
-                                                 :alt-text="itemData | itemName"
-                                                 :title-text="itemData | itemName"
-                                                 :item-url="itemData | itemURL"
-                                                 :show-dots="{{ ceresConfig.item.categoryShowDots | json_encode }}"
-                                                 :show-nav="{{ ceresConfig.item.categoryShowNav | json_encode }}"
-                                                 :enable-carousel="{{ enableCarousel }}"
-                                                 ref="categoryImageCarousel">
-                        </category-image-carousel>
+                        <slot name="custom-image">
+                            <category-image-carousel template="#vue-category-image-carousel"
+                                                    :image-urls-data="itemData.images | itemImages(imageUrlAccessor)"
+                                                    :alt-text="itemData | itemName"
+                                                    :title-text="itemData | itemName"
+                                                    :item-url="itemData | itemURL"
+                                                    :show-dots="{{ ceresConfig.item.categoryShowDots | json_encode }}"
+                                                    :show-nav="{{ ceresConfig.item.categoryShowNav | json_encode }}"
+                                                    :enable-carousel="{{ enableCarousel }}"
+                                                    ref="categoryImageCarousel">
+                            </category-image-carousel>
+                        </slot>
                     </div>
                 </div>
             </div>
