--- a/resources/scss/ceres/components/_notifications.scss
+++ b/resources/scss/ceres/components/_notifications.scss
@@ -6,7 +6,7 @@
 
     @include media-breakpoint-down(xs) {
         width: 100%;
-        padding: 0 15px;
+        padding: 0 ($grid-gutter-width / 2);
         right: auto;
     }
 }
