--- a/resources/views/Widgets/Header/TopBarWidget.twig
+++ b/resources/views/Widgets/Header/TopBarWidget.twig
@@ -13,6 +13,7 @@
 {% set showItemImages               = widget.settings.showItemImages.mobile %}
 {% set forwardToSingleItem          = widget.settings.forwardToSingleItem.mobile %}
 
+{{ Twig.import("LayoutContainer", "Ceres::PageDesign.Macros.LayoutContainer") }}
 {{ Twig.set("currencyFormat", Twig.call("config", ["Ceres.currency.format"])) }}
 {{ Twig.set("currencyFormatSelect", Twig.call("config", ["Ceres.currency.format_selection"])) }}
 {{ Twig.set("currencyData", Twig.call("services.checkout.getCurrencyData") ~ "[currencyFormat]") }}
@@ -20,26 +21,31 @@
 {{ Twig.set("basketPreviewType", Twig.call("config", ["Ceres.basket.preview_type"])) }}
 {{ Twig.set("activeCurrencies", Twig.call("config", ["Ceres.currency.available_currencies"]) ~ " | split(\", \")") }}
 {{ Twig.set("defaultLanguage", Twig.call("services.webstoreConfig.getDefaultLanguage")) }}
+{{ Twig.set("overrideSearchBar", Twig.call("LayoutContainer.show", ["Ceres::Search.SearchBar"])) }}
 
 <div class="top-bar{% if not isFixed %} unfixed{% endif %}">
     <div class="container-max">
         <div class="row">
             <div class="top-bar-items {% if searchStyle == "permanent" %}search-shown{% endif %}">
                 {% if searchStyle == "permanent" %}
-                    <div class="always-visible-search">
-                        <item-search template="#vue-item-search"
-                                     :show-item-images="{{ showItemImages | json_encode }}"
-                                     :forward-to-single-item="{{ forwardToSingleItem | json_encode }}">
-                            <div class="search-box-inner">
-                                <div class="search-box-shadow-frame">
-                                    <input type="search" class="search-input"/>
-                                    <button class="search-submit" type="submit">
-                                        <i class="fa fa-search sm-up"></i>
-                                    </button>
+                    {{ Twig.if("overrideSearchBar | trim is empty") }}
+                        <div class="always-visible-search">
+                            <item-search template="#vue-item-search"
+                                         :show-item-images="{{ showItemImages | json_encode }}"
+                                         :forward-to-single-item="{{ forwardToSingleItem | json_encode }}">
+                                <div class="search-box-inner">
+                                    <div class="search-box-shadow-frame">
+                                        <input type="search" class="search-input"/>
+                                        <button class="search-submit" type="submit">
+                                            <i class="fa fa-search sm-up"></i>
+                                        </button>
+                                    </div>
                                 </div>
-                            </div>
-                        </item-search>
-                    </div>
+                            </item-search>
+                        </div>
+                    {{ Twig.else() }}
+                        {{ Twig.print("overrideSearchBar | raw") }}
+                    {{ Twig.endif() }}
                 {% endif %}
                 <div class="controls">
                     <ul id="controlsList" class="controls-list list-inline">
@@ -148,9 +154,13 @@
         <div class="row">
             {% if searchStyle == "onDemand" %}
                 <div id="searchBox" class="cmp cmp-search-box collapse">
-                    <item-search
-                        :show-item-images="{{ showItemImages | json_encode }}"
-                        :forward-to-single-item="{{ forwardToSingleItem | json_encode }}"></item-search>
+                    {{ Twig.if("overrideSearchBar | trim is empty") }}
+                        <item-search
+                            :show-item-images="{{ showItemImages | json_encode }}"
+                            :forward-to-single-item="{{ forwardToSingleItem | json_encode }}"></item-search>
+                    {{ Twig.else() }}
+                        {{ Twig.print("overrideSearchBar | raw") }}
+                    {{ Twig.endif() }}
                 </div>
             {% endif %}
 
